--- a/SQL_Basics.ipynb
+++ b/SQL_Basics.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKWoeBauTg8bO2n4IY1IN8",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPPWNIy5DLCmWYGqQ+3jhOP"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,15 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Rajat-Sri/SQL_Basics/blob/main/SQL_Basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "\n"
+      ],
+      "metadata": {
+        "id": "xRXB_p5EaM3F"
+      }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
         "## /* SELECT */\n",
         "\n",
@@ -131,15 +129,9 @@
         "WHERE amount IN(0.99,1.99,1.98)\n",
         "\n",
         "SELECT * FROM customer\n",
-        "WHERE first_name IN('John','Jake','Julie')\n"
-      ],
-      "metadata": {
-        "id": "xRXB_p5EaM3F"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "WHERE first_name IN('John','Jake','Julie')\n",
+        "\n",
+        "\n",
         "## /* LIKE & ILIKE */\n",
         "SELECT * FROM customer\n",
         "WHERE first_name LIKE 'J%'\n",
@@ -271,6 +263,15 @@
         "ON inventory.film_id = film.film_id\n",
         "WHERE inventory.film_id IS NULL"
       ],
+      "metadata": {
+        "id": "xuseusB3cuAg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
         "id": "R9Y0Yi1hbEJj"
       }
